--- a/Interim/interim.bib
+++ b/Interim/interim.bib
@@ -205,7 +205,6 @@
 	shorttitle = {Teaching {Qubits} to {Sing}},
 	url = {http://arxiv.org/abs/2207.08225},
 	doi = {10.48550/arXiv.2207.08225},
-	abstract = {This paper introduces a system that learns to sing new tunes by listening to examples. It extracts sequencing rules from input music and uses these rules to generate new tunes, which are sung by a vocal synthesiser. We developed a method to represent rules for musical composition as quantum circuits. We claim that such musical rules are quantum native: they are naturally encodable in the amplitudes of quantum states. To evaluate a rule to generate a subsequent event, the system builds the respective quantum circuit dynamically and measures it. After a brief discussion about the vocal synthesis methods that we have been experimenting with, the paper introduces our novel generative music method through a practical example. The paper shows some experiments and concludes with a discussion about harnessing the creative potential of the system.},
 	urldate = {2024-10-29},
 	publisher = {arXiv},
 	author = {Miranda, Eduardo Reck and Siegelwax, Brian N.},
@@ -213,4 +212,34 @@
 	year = {2022},
 	note = {arXiv:2207.08225},
 	keywords = {Quantum Physics, Computer Science - Artificial Intelligence},
+}
+
+
+@article{dwave_manufactured_2011,
+	title = {Quantum annealing with manufactured spins},
+	volume = {473},
+	copyright = {2011 Springer Nature Limited},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/nature10012},
+	doi = {10.1038/nature10012},
+	abstract = {Many interesting but practically intractable problems can be reduced to that of finding the ground state of a system of interacting spins. It is believed that the ground state of some naturally occurring spin systems can be effectively attained through a process called quantum annealing. Johnson et al. use quantum annealing to find the ground state of an artificial Ising spin system comprised of an array of eight superconducting flux qubits with programmable spin–spin couplings. With an increased number of spins, the system may provide a practical physical means to implement quantum algorithms, possibly enabling more effective approaches towards solving certain classes of hard combinatorial optimization problems.},
+	language = {en},
+	number = {7346},
+	urldate = {2025-01-06},
+	journal = {Nature},
+	author = {Johnson, M. W. and Amin, M. H. S. and Gildert, S. and Lanting, T. and Hamze, F. and Dickson, N. and Harris, R. and Berkley, A. J. and Johansson, J. and Bunyk, P. and Chapple, E. M. and Enderud, C. and Hilton, J. P. and Karimi, K. and Ladizinsky, E. and Ladizinsky, N. and Oh, T. and Perminov, I. and Rich, C. and Thom, M. C. and Tolkacheva, E. and Truncik, C. J. S. and Uchaikin, S. and Wang, J. and Wilson, B. and Rose, G.},
+	month = may,
+	year = {2011},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {Quantum information, Quantum mechanics},
+	pages = {194--198},
+}
+
+@article{cambouropoulos_lbdm_2011,
+	title = {The {Local} {Boundary} {Detection} {Model} ({LBDM}) and its {Application} in the {Study} of {Expressive} {Timing}},
+	issn = {2223-3881},
+	url = {http://hdl.handle.net/2027/spo.bbp2372.2001.021},
+	journal = {International Computer Music Association},
+	author = {Cambouropoulos, Emilios},
+	year = {2011},
 }
